--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
             Header & Navigation
             ========= */
         .main-header {
-            background-color: #0b3d91;
+            background-color: transparent;
             box-shadow: 0 2px 5px rgba(0,0,0,0.2);
             position: fixed;
             width: 100%;
@@ -61,7 +61,7 @@
             align-items: center;
             gap: 10px;
             padding: 10px 40px;
-            background-color: #0b3d91;
+            background-color:transparent;
             height: 70px;
         }
 
@@ -95,7 +95,7 @@
             display: flex;
             align-items: center;
             justify-content: flex-start;
-            background-color: #518aee;
+            background-color:transparent;
             padding: 0.5rem 2rem;
         }
 
@@ -120,7 +120,6 @@
 
         .nav-link:hover {
             color: #64ec2e;
-            border-bottom: 2px solid #ffd700;
         }
 
         .hamburger {
